--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.2",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
